--- a/css/styles.css
+++ b/css/styles.css
@@ -141,7 +141,7 @@ p {
 }
 
 .price {
-    background: url() no-repeat center;
+    background: url(img/visión.jpg) no-repeat center;
     background-size: cover;
     background-attachment: fixed;
     text-align: center;
