--- a/css/styles.css
+++ b/css/styles.css
@@ -51,12 +51,8 @@ body {
 }
 
 .header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 60vh;
-    background: url(img/header.jpg) no-repeat center;
-    background-size: cover;
+    padding: 50px 0;
+    background: #80cae0;
 }
 
 .title {
@@ -141,10 +137,8 @@ p {
 }
 
 .price {
-    background: url(img/visión.jpg) no-repeat center;
-    background-size: cover;
-    background-attachment: fixed;
-    text-align: center;
+    padding: 50px 0;
+    background: #80cae0;
 }
 
 .about {
